# ATom

./: .buildinfo  .gitattributes  LICENSE.md  README.md  genindex.html  gettingStarted.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
_sources/: intro.md
_sources/contents/: theory.md
atom/: __init__.py  utils.py
atom/backgroundFlow/: __init__.py  flowModel.py  linearsystem.py
atom/fluctuatingField/: __init__.py  covarinceMatix.py  modelGrid.py  pathSetup.py  timeDependentStochasticInversion.py
atom/signalProc/: __init__.py  atarray.py  audiodata.py  auxdata.py  constants.py  traveltimeextractor.py
atom/simulation/: __init__.py  les.py
atom_docs/: _config.yml  _toc.yml  gettingStarted.md
atom_docs/contents/: theory.md
autoapi/: index.html
autoapi/atom/: index.html
conf/: configs.yaml
conf/atarray/: array_20220628.yaml
conf/audiodata/: audiodata_20220628.yaml
conf/auxdata/: auxdata_20220628.yaml
conf/constants/: constants_20220628.yaml
conf/covariancematrix/: covariancematrix_20240416.yaml
conf/flowModel/: florisInput.yaml  homogeneous.yaml  logLaw.yaml  powerLaw.yaml
conf/traveltimeextractor/: traveltimeextractor_20220628.yaml
contents/: theory.html
contents/01_SignalProcessingModule_20240410/: 01_SignalProcessingModule_20240410.html
contents/02_travelTimeExtractor_20240411/: 02_travelTimeExtractor_20240411.html
examples/: ATomDev.py  AuxData_example.txt  MainData_example.txt  auxData_test.py  tt_batch_ATomDev.py
examples/notebooks/: 05_TDSI_20240416.ipynb  (+7 more)
(+113 files in other folders)
